--- a/frontend/src/styles/Post.css
+++ b/frontend/src/styles/Post.css
@@ -1,3 +1,31 @@
 body {
     background-color: #f5f5f5;
 }
+
+.login {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    width: 100%;
+    background-color: #f5f5f5;
+
+}
+
+body {
+    background-color: #f5f5f5;
+}
+
+.center {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.paper_container {
+    padding: 50px 20px;
+    width: 600px;
+    margin: 20px auto;
+}
