--- a/frontend/src/styles/Header.css
+++ b/frontend/src/styles/Header.css
@@ -49,18 +49,23 @@
     flex-grow: 1;
     flex-basis: 0;
     flex-shrink: 0;
-    width: 100%;
+    width: 100vw;
 }
 
 .navContainer {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 20%;
-    height: 2vh;
+    width: 100%;
+    height: 100%;
 }
+
 
 .link {
     text-decoration: none;
-    color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
 }
