--- a/frontend/src/components/AddQuiz.css
+++ b/frontend/src/components/AddQuiz.css
@@ -4,7 +4,7 @@
 
 .QuizQuestions {
     margin: 0 auto;
-    width:40%;
+    width:80%;
     height: auto;
     background-color: darkseagreen ;
     padding: 16px;
@@ -23,4 +23,10 @@ li {
     border: 3px solid whitesmoke;
     border-radius: 10px;
     font-size: 20px;
+}
+
+.redirect {
+    background: none;
+    border: none;
+
 }
